# bootprofiler

./: .gitignore  LICENSE  README.md  pyproject.toml
bootprofiler/: __init__.py  cli.py
bootprofiler/core/: __init__.py  collector.py  detector.py  parser.py  visualizer.py
